--- a/test.html
+++ b/test.html
@@ -121,6 +121,14 @@
                 Spreader gecontroleerd
               </label>
             </div>
+            <button
+              href="#"
+              type="button"
+              class="btn btn-primary"
+              onclick="alert('Voor mij ook graag een Mercedes EQE nonkel Edwin.');"
+            >
+              Bevestigen
+            </button>
           </div>
         </div>
       </main>
