--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Take 5</title>
+    <title>My Responsive Website</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -121,6 +121,14 @@
                 Spreader gecontroleerd
               </label>
             </div>
+            <button
+              href="#"
+              type="button"
+              class="btn btn-primary"
+              onclick="alert('Voor mij ook graag een Mercedes EQE nonkel Edwin.');"
+            >
+              Bevestigen
+            </button>
           </div>
         </div>
       </main>
